kubernetes/app/deployment.yaml
apiVersion: v1
Kind: Namespace
metadata:
  name: test-flux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
