kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: test-flux  
spec:
  selector:
    app: hello-api
  ports:
    - port: 80
      targetPort: 3000   # port de ton application Node.js
